--- a/docs/examples/home_assistant_media_player.yaml
+++ b/docs/examples/home_assistant_media_player.yaml
@@ -35,6 +35,8 @@ dbus:
             - method: SetPosition
             - method: PlayPause
             - method: OpenUri
+          properties:
+            - property: Volume
 
       flows:
         - name: "MPRIS publish player state"
@@ -50,17 +52,18 @@ dbus:
             - type: context_set
               context:
                 mpris_bus_name: '{{ dbus_list("org.mpris.MediaPlayer2.*") | first }}'
-                # TODO: This would be a nice addition to avoid repetition
-                #   player_properties: |
-                #     {{ dbus_call(mpris_bus_name, path, 'org.freedesktop.DBus.Properties', 'GetAll', ['org.mpris.MediaPlayer2.Player']) | to_yaml }}
                 path: /org/mpris/MediaPlayer2
+            - type: context_set
+              context:
+                player_properties: |
+                  {{ dbus_call(mpris_bus_name, path, 'org.freedesktop.DBus.Properties', 'GetAll', ['org.mpris.MediaPlayer2.Player']) }}
             - type: mqtt_publish
               topic: dbus2mqtt/org.mpris.MediaPlayer2/state
               payload_type: json
               payload_template: |
                 bus_name: {{ mpris_bus_name }}
-                {{ dbus_call(mpris_bus_name, path, 'org.freedesktop.DBus.Properties', 'GetAll', ['org.mpris.MediaPlayer2.Player']) | to_yaml }}
                 Volume: {{ dbus_property_get(mpris_bus_name, path, 'org.mpris.MediaPlayer2.Player', 'Volume', 0) }}
+                {{ player_properties | to_yaml }}
         - name: "MPRIS player removed"
           triggers:
             - type: bus_name_removed
