chore: code cleanup and small doc improvements

--- a/docs/examples/linux_desktop.yaml
+++ b/docs/examples/linux_desktop.yaml
@@ -23,8 +23,9 @@ dbus:
             - method: Reboot  # reboot dialog
 
       flows:
-        - name: "publish state on schedule"
+        - name: "publish state at startup and schedule"
           triggers:
+            - type: bus_name_added
             - type: schedule
               interval: {seconds: 5}
           actions:
