Per subscription matching mode

--- a/docs/examples/home_assistant_media_player.yaml
+++ b/docs/examples/home_assistant_media_player.yaml
@@ -7,8 +7,9 @@ dbus:
 
     - bus_name: org.mpris.MediaPlayer2.*
       path: /org/mpris/MediaPlayer2
-      # https://mpris2.readthedocs.io/en/latest/interfaces.html#mpris2.MediaPlayer2
+      matching_mode: bus_name_only
 
+      # https://mpris2.readthedocs.io/en/latest/interfaces.html#mpris2.MediaPlayer2
       interfaces:
         - interface: org.freedesktop.DBus.Properties
           signals:
