--- a/docs/examples/bluez.yaml
+++ b/docs/examples/bluez.yaml
@@ -16,14 +16,59 @@ dbus:
         - name: "publish state"
           triggers:
             - type: bus_name_added
-            - type: schedule
-              interval: {seconds: 5}
+            - type: dbus_signal
+              interface: org.freedesktop.DBus.Properties
+              signal: PropertiesChanged
+              # - type: schedule
+              #   interval: {seconds: 5}
           actions:
+            - type: context_set
+              context:
+                adapter_properties: |
+                  {{ dbus_call('org.bluez', '/org/bluez/hci0', 'org.freedesktop.DBus.Properties', 'GetAll', ['org.bluez.Adapter1']) }}
+            - type: context_set
+              context:
+                devices: >-
+                  [
+                  {%- for uuid in adapter_properties.UUIDs -%}
+                  {
+                    "uuid": "{{ uuid }}",
+                  },
+                  {%- endfor -%}
+                  ]
             - type: mqtt_publish
-              topic: dbus2mqtt/bluez
+              topic: dbus2mqtt/bluez/hci0
               payload_type: json
               payload_template:
-                Adapter1: |
-                  {{ dbus_call('org.bluez', '/org/bluez/hci0', 'org.freedesktop.DBus.Properties', 'GetAll', ['org.bluez.Adapter1']) }}
-                LEAdvertisingManager1: |
-                  {{ dbus_call('org.bluez', '/org/bluez/hci0', 'org.freedesktop.DBus.Properties', 'GetAll', ['org.bluez.LEAdvertisingManager1']) }}
+                hci0: "{{ adapter_properties }}"
+                hci0_devices: "{{ devices }}"
+
+    - bus_name: org.bluez
+      path: /org/bluez/hci0/dev_*
+
+      interfaces:
+        - interface: org.freedesktop.DBus.Properties
+          # signals:
+          #   - signal: PropertiesChanged
+          methods:
+            - method: GetAll
+
+      flows:
+        - name: "publish state"
+          triggers:
+            # - type: bus_name_added
+            - type: bus_name_path_added
+            # - type: dbus_signal
+            #   interface: org.freedesktop.DBus.Properties
+            #   signal: PropertiesChanged
+            # - type: schedule  # schedule won't work, just one is running for this flow
+            #   interval: {seconds: 5}
+          actions:
+            - type: context_set
+              context:
+                device_properties: |
+                  {{ dbus_call('org.bluez', path, 'org.freedesktop.DBus.Properties', 'GetAll', ['org.bluez.Device1']) }}
+            - type: mqtt_publish
+              topic: dbus2mqtt/bluez/hci0/{{ device_properties.Address }}
+              payload_type: json
+              payload_template: "{{ device_properties }}"
