--- a/docs/examples/home_assistant_media_player.yaml
+++ b/docs/examples/home_assistant_media_player.yaml
@@ -1,7 +1,3 @@
-# mqtt:
-#   host:
-#   port:
-
 dbus:
   subscriptions:
 
@@ -120,7 +116,7 @@ dbus:
           triggers:
             - type: mqtt_msg
               topic: dbus2mqtt/org.mpris.MediaPlayer2/command
-              filter: "{{ value_json.action == 'play-pause' }}"
+              filter: "{{ payload.action == 'play-pause' }}"
           actions:
             - type: context_set
               context:
