--- a/docs/examples/home_assistant_media_player/mqtt_mediaplayer.yaml
+++ b/docs/examples/home_assistant_media_player/mqtt_mediaplayer.yaml
@@ -24,41 +24,22 @@ media_player:
         current_position_template: "{{ (state_attr('sensor.mpris_media_player', 'Position') / 1000000) | int }}"
 
         # title: 'xesam:title' or filename without extension from 'xesam:url'
-        title_template: >-
-          {% set metadata = state_attr('sensor.mpris_media_player', 'Metadata') or {} %}
-          {% set title = metadata.get('xesam:title', '') %}
-          {% if not title or title == '' %}
-          {% set title = metadata.get('xesam:url', '') | regex_findall(find='([^\\/]+?)(?:\.[^.\\/]+)?$') | first | default('') %}
-          {% endif %}
-          {{ title }}
+        title_template: "{{ state_attr('sensor.mpris_media_player', 'Title') }}"
 
         media_content_type_template: music  # needed to show 'artist'
         media_duration_template: "{{ ((state_attr('sensor.mpris_media_player', 'Metadata') or {}).get('mpris:length', 0) / 1000000) | int }}"
         album_template: "{{ (state_attr('sensor.mpris_media_player', 'Metadata') or {}).get('xesam:album', '') }}"
-        artist_template: >-
-          {% set artist = (state_attr('sensor.mpris_media_player', 'Metadata') or {}).get('xesam:artist', '') %}
-          {% if artist is string %}
-          {% set artist = [artist] %}
-          {% endif %}
-          {{ artist | first }}
+        artist_template: "{{ state_attr('sensor.mpris_media_player', 'Artist') }}"
 
         # mpris:artUrl might contain a file:// schema. In these cases we rely on images published via MQTT
         media_image_url_template: >-
           {% set mpris_metadata = state_attr('sensor.mpris_media_player', 'Metadata') or {} %}
           {% set mpris_art_url = mpris_metadata.get('mpris:artUrl', '') %}
-          {% set mpris_url = mpris_metadata.get('xesam:url') %}
 
-          {% if mpris_art_url.startswith('http') %}
-            {{ mpris_art_url }}
-          {% elif mpris_art_url.startswith('file://') %}
-            http://127.0.0.1:8123{{ state_attr('image.mpris_media_player_mqtt_image', 'entity_picture') }}
+          {% if mpris_art_url.startswith('file://') %}
+            http://127.0.0.1:8123{{ state_attr('image.mpris_media_player_image', 'entity_picture') }}
           {% else %}
-            {{
-                mpris_url | regex_replace(
-                  find='https:\/\/www\\.youtube\\.com\/watch\\?v=([^&]+).*',
-                  replace='https://img.youtube.com/vi/\\1/maxresdefault.jpg'
-                )
-            }}
+            {{ tate_attr('sensor.mpris_media_player', 'media_image_url') }}
           {% endif %}
 
         turn_off:
