--- a/docs/examples/home_assistant_media_player/mqtt_mediaplayer.yaml
+++ b/docs/examples/home_assistant_media_player/mqtt_mediaplayer.yaml
@@ -1,16 +1,3 @@
-mqtt:
-  sensor:
-    - name: MPRIS Media Player
-      state_topic: dbus2mqtt/org.mpris.MediaPlayer2/state
-      json_attributes_topic: dbus2mqtt/org.mpris.MediaPlayer2/state
-      value_template: >-
-        {% set status = value_json.PlaybackStatus %}
-        {{ {'Playing': 'playing', 'Paused': 'paused', 'Stopped': 'idle'}.get(status, 'off') }}
-
-  image:
-    - name: MPRIS Media Player MQTT image
-      image_topic: dbus2mqtt/org.mpris.MediaPlayer2/artUrlImage
-
 media_player:
   - platform: media_player_template
     media_players:
@@ -20,26 +7,22 @@ media_player:
         value_template: "{{ states('sensor.mpris_media_player') }}"
 
         current_volume_template: "{{ state_attr('sensor.mpris_media_player', 'Volume') }}"
-        current_is_muted_template: "{{ state_attr('sensor.mpris_media_player', 'Volume') == 0 }}"
-        current_position_template: "{{ (state_attr('sensor.mpris_media_player', 'Position') / 1000000) | int }}"
-
-        # title: 'xesam:title' or filename without extension from 'xesam:url'
-        title_template: "{{ state_attr('sensor.mpris_media_player', 'Title') }}"
+        current_is_muted_template: "{{ state_attr('sensor.mpris_media_player', 'VolumeMuted') }}"
+        current_position_template: "{{ state_attr('sensor.mpris_media_player', 'MediaPosition') }}"
+        title_template: "{{ state_attr('sensor.mpris_media_player', 'MediaTitle') }}"
 
         media_content_type_template: music  # needed to show 'artist'
-        media_duration_template: "{{ ((state_attr('sensor.mpris_media_player', 'Metadata') or {}).get('mpris:length', 0) / 1000000) | int }}"
-        album_template: "{{ (state_attr('sensor.mpris_media_player', 'Metadata') or {}).get('xesam:album', '') }}"
-        artist_template: "{{ state_attr('sensor.mpris_media_player', 'Artist') }}"
+        media_duration_template: "{{ state_attr('sensor.mpris_media_player', 'MediaDuration') }}"
+        album_template: "{{ state_attr('sensor.mpris_media_player', 'MediaAlbum') }}"
+        artist_template: "{{ state_attr('sensor.mpris_media_player', 'MediaArtists') }}"
 
         # mpris:artUrl might contain a file:// schema. In these cases we rely on images published via MQTT
         media_image_url_template: >-
-          {% set mpris_metadata = state_attr('sensor.mpris_media_player', 'Metadata') or {} %}
-          {% set mpris_art_url = mpris_metadata.get('mpris:artUrl', '') %}
-
-          {% if mpris_art_url.startswith('file://') %}
+          {% set media_image_url = state_attr('sensor.mpris_media_player', 'MediaImageUrl') %}
+          {% if media_image_url.startswith('file://') %}
             http://127.0.0.1:8123{{ state_attr('image.mpris_media_player_image', 'entity_picture') }}
           {% else %}
-            {{ tate_attr('sensor.mpris_media_player', 'media_image_url') }}
+            {{ media_image_url }}
           {% endif %}
 
         turn_off:
