--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,9 +53,19 @@ repos:
 
   - repo: local
     hooks:
+      - id: check-mkdocs
+        name: check-mkdocs
+        entry: uv run --active mkdocs build --strict
+        language: python
+        additional_dependencies:
+          - uv
+        always_run: true
+        pass_filenames: false
+  - repo: local
+    hooks:
       - id: deptry
         name: deptry
-        entry: uv run deptry .
+        entry: uv run --active deptry .
         language: python
         additional_dependencies:
           - uv
