--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -142,4 +142,11 @@ hooks:
 plugins:
   - open-in-new-tab:
       add_icon: true
+  - mkdocstrings:
+      default_handler: python
+      handlers:
+        python:
+          paths: [src]
+          options:
+            docstring_style: google
 #   - git-revision-date-localized: {}
