--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -149,4 +149,5 @@ plugins:
           paths: [src]
           options:
             docstring_style: google
+            show_source: false
 #   - git-revision-date-localized: {}
