Documentation for missing template descriptions (#184)
* docs: Added template description for dbus_list

* docs: Added template description for dbus_call

* docs: Improved templating documentation

* docs: many docstring improvements

* docs: jinja filter improvements

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -142,4 +142,12 @@ hooks:
 plugins:
   - open-in-new-tab:
       add_icon: true
+  - mkdocstrings:
+      default_handler: python
+      handlers:
+        python:
+          paths: [src]
+          options:
+            docstring_style: google
+            show_source: false
 #   - git-revision-date-localized: {}
