--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,18 +55,18 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pytest>=8.3.5",
+    "pytest-asyncio>=1.0.0",
     "types-pyyaml>=6.0.12.20241230",
     "taskipy>=1.14.1",
-    "ruff>=0.11.2",
-    "pyright>=1.1.396",
     "pre-commit>=4.2.0",
     "pip>=25.0.1",
-    "pytest-asyncio>=1.0.0",
-    "mkdocs>=1.6.1",
-    "mkdocs-material>=9.6.15",
-    "mkdocs-open-in-new-tab>=1.0.8",
-    "deptry>=0.23.0",
-    "mkdocstrings-python>=1.18.2",
+    "ruff==0.11.2",
+    "pyright==1.1.396",
+    "deptry==0.23.0",
+    "mkdocs==1.6.1",
+    "mkdocs-material==9.6.15",
+    "mkdocs-open-in-new-tab==1.0.8",
+    "mkdocstrings-python==1.18.2",
 ]
 
 [project.urls]
