--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,26 +40,20 @@ classifiers = [
 requires-python = ">=3.10"
 
 dependencies = [
-    "apscheduler>=3.11.0",
+    "apscheduler==3.11.0",
+    "dbus-fast==2.44.1",
+    "jsonargparse==4.38.0",
+    "paho-mqtt==2.1.0",
+    "jinja2==3.1.6",
+    "jinja2-ansible-filters==1.3.2",
     "colorlog>=6.9.0",
-    "dbus-fast>=2.44.1",
     "janus>=2.0.0",
-    "jinja2>=3.1.6",
-    "jinja2-ansible-filters>=1.3.2",
-    "jsonargparse>=4.38.0",
-    "paho-mqtt>=2.1.0",
     "python-dotenv>=1.1.0",
     "pyyaml>=6.0.2",
 ]
 
 [dependency-groups]
 dev = [
-    "pytest>=8.3.5",
-    "pytest-asyncio>=1.0.0",
-    "types-pyyaml>=6.0.12.20241230",
-    "taskipy>=1.14.1",
-    "pre-commit>=4.2.0",
-    "pip>=25.0.1",
     "ruff==0.14.3",
     "pyright==1.1.407",
     "deptry==0.23.1",
@@ -67,6 +61,12 @@ dev = [
     "mkdocs-material==9.6.23",
     "mkdocs-open-in-new-tab==1.0.8",
     "mkdocstrings-python==1.18.2",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=1.0.0",
+    "types-pyyaml>=6.0.12.20241230",
+    "taskipy>=1.14.1",
+    "pre-commit>=4.2.0",
+    "pip>=25.0.1",
 ]
 
 [project.urls]
