chore: uv lock diff reporting

--- a/.github/workflows/uv-lock-report.yml
+++ b/.github/workflows/uv-lock-report.yml
@@ -20,4 +20,4 @@ jobs:
         uses: mw-root/uv-lock-report@v0.11.1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          output-format: markdown
+          output-format: table
