--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,12 +40,12 @@ classifiers = [
 requires-python = ">=3.10"
 
 dependencies = [
-    "apscheduler==3.11.1",
-    "dbus-fast==2.45.1",
-    "jsonargparse==4.43.0",
-    "paho-mqtt==2.1.0",
-    "jinja2==3.1.6",
-    "jinja2-ansible-filters==1.3.2",
+    "apscheduler>=3.11.1",
+    "dbus-fast>=2.45.1",
+    "jsonargparse>=4.43.0",
+    "paho-mqtt>=2.1.0",
+    "jinja2>=3.1.6",
+    "jinja2-ansible-filters>=1.3.2",
     "colorlog>=6.9.0",
     "janus>=2.0.0",
     "python-dotenv>=1.1.0",
@@ -54,13 +54,13 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "ruff==0.14.5",
-    "pyright==1.1.407",
-    "deptry==0.24.0",
-    "mkdocs==1.6.1",
-    "mkdocs-material==9.7.0",
-    "mkdocs-open-in-new-tab==1.0.8",
-    "mkdocstrings-python==1.19.0",
+    "ruff>=0.14.5",
+    "pyrigh>=1.1.407",
+    "deptry>=0.24.0",
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.7.0",
+    "mkdocs-open-in-new-tab>=1.0.8",
+    "mkdocstrings-python>=1.19.0",
     "pytest>=8.3.5",
     "pytest-asyncio>=1.0.0",
     "types-pyyaml>=6.0.12.20241230",
