--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "ruff>=0.14.5",
-    "pyrigh>=1.1.407",
+    "pyright>=1.1.407",
     "deptry>=0.24.0",
     "mkdocs>=1.6.1",
     "mkdocs-material>=9.7.0",
