--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,12 +40,12 @@ classifiers = [
 requires-python = ">=3.10"
 
 dependencies = [
-    "apscheduler>=3.11.1",
-    "dbus-fast>=2.45.1",
-    "jsonargparse>=4.43.0",
-    "paho-mqtt>=2.1.0",
-    "jinja2>=3.1.6",
-    "jinja2-ansible-filters>=1.3.2",
+    "apscheduler==3.11.1",
+    "dbus-fast==2.45.1",
+    "jsonargparse==4.43.0",
+    "paho-mqtt==2.1.0",
+    "jinja2==3.1.6",
+    "jinja2-ansible-filters==1.3.2",
     "colorlog>=6.9.0",
     "janus>=2.0.0",
     "python-dotenv>=1.1.0",
@@ -54,8 +54,8 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "ruff>=0.14.5",
-    "pyright>=1.1.407",
+    "ruff==0.14.5",
+    "pyright==1.1.407",
     "deptry>=0.24.0",
     "mkdocs>=1.6.1",
     "mkdocs-material>=9.7.0",
