--- a/docs/examples/home_assistant_media_player.yaml
+++ b/docs/examples/home_assistant_media_player.yaml
@@ -36,7 +36,7 @@ dbus:
             - property: Volume
 
       flows:
-        - name: "publish player state"
+        - name: publish player state
           triggers:
             - type: object_added
             - type: schedule
@@ -73,7 +73,7 @@ dbus:
                     | combine({ 'Metadata': { 'xesam:url': metadata_xesam_url } }, recursive=True)
                 }}
 
-        - name: "publish local art image"
+        - name: publish local art image
           # mpris:artUrl can have a file:// or http:// schema
           # Home Assistant is unable to access file:// so we use MQTT for that
           triggers:
@@ -91,7 +91,7 @@ dbus:
               payload_template: |
                 {{ artUrl if artUrl and artUrl.startswith('file://') else None }}
 
-        - name: "player removed"
+        - name: player removed
           triggers:
             - type: object_removed
             # filter: # TODO: Check if this is the last or inactive one #
@@ -102,81 +102,72 @@ dbus:
               payload_template:
                 PlaybackStatus: "Off"
 
-flows:
-  - name: Home Assistant Discovery
-    triggers:
-      # - type: object_added  # clarify in docs that this one is not supported in a global flow
-      # - type: startup  # to be added
-      # - type: shutdown  # to be added
-      - type: schedule
-        interval: {seconds: 5}
-    actions:
-      # - type: context_set
-      #   context:
-      - type: mqtt_publish
-        topic: homeassistant/device/mpris-E8EB9686/config
-        payload_type: json
-        payload_template:
-          device:
-            identifiers:
-              - mpris-E8EB9686
-            name: MPRIS Media Player
-            model: MPRIS Media Player
-            manufacturer: dbus2mqtt
-            sw_version: "{{ dbus2mqtt.version }}"
-          origin:
-            name: dbus2mqtt
-            # sw: "2.1"
-            # url: https://github.com/jwnmulder/dbus2mqtt
-          components:
-            player_state:
-              platform: sensor
-              name: State
-              unique_id: e8eb9686-f947-46e1-80d4-fc1e812e39a2
-              state_topic: dbus2mqtt/org.mpris.MediaPlayer2/state
-              value_template: >-
-                {% raw %}
-                {% set status = value_json.PlaybackStatus %}
-                {{ {'Playing': 'Playing', 'Paused': 'Paused', 'Stopped': 'Idle'}.get(status, 'Off') }}
-                {% endraw %}
-              json_attributes_topic: dbus2mqtt/org.mpris.MediaPlayer2/state
-              json_attributes_template: >
-                {% raw %}
-                {% set metadata = value_json.get('Metadata') or {} %}
-                {% set mpris_art_url = metadata.get('mpris:artUrl', '') %}
-                {% set xesam_artists = metadata.get('xesam:artist', ['']) %}
-                {% set xesam_url = metadata.get('xesam:url') %}
+        - name: Home Assistant Discovery
+          triggers:
+            - type: object_added
+          actions:
+            - type: mqtt_publish
+              topic: homeassistant/device/mpris-E8EB9686/config
+              payload_type: json
+              payload_template:
+                device:
+                  identifiers:
+                    - mpris-E8EB9686
+                  name: MPRIS Media Player
+                  model: MPRIS Media Player
+                  manufacturer: dbus2mqtt
+                  sw_version: "{{ dbus2mqtt.version }}"
+                origin:
+                  name: dbus2mqtt
+                components:
+                  player_state:
+                    platform: sensor
+                    name: State
+                    unique_id: e8eb9686-f947-46e1-80d4-fc1e812e39a2
+                    state_topic: dbus2mqtt/org.mpris.MediaPlayer2/state
+                    value_template: >-
+                      {% raw %}
+                      {% set status = value_json.PlaybackStatus %}
+                      {{ {'Playing': 'playing', 'Paused': 'paused', 'Stopped': 'idle'}.get(status, 'off') }}
+                      {% endraw %}
+                    json_attributes_topic: dbus2mqtt/org.mpris.MediaPlayer2/state
+                    json_attributes_template: >
+                      {% raw %}
+                      {% set metadata = value_json.get('Metadata') or {} %}
+                      {% set mpris_art_url = metadata.get('mpris:artUrl', '') %}
+                      {% set xesam_artists = metadata.get('xesam:artist', ['']) %}
+                      {% set xesam_url = metadata.get('xesam:url') %}
 
-                {% set artists = [xesam_artists] if xesam_artists is string else xesam_artists %}
+                      {% set artists = [xesam_artists] if xesam_artists is string else xesam_artists %}
 
-                {# title: 'xesam:title' or filename without extension from 'xesam:url' #}
-                {% set title = metadata.get('xesam:title', '') %}
-                {% if not title or title == '' %}
-                {%    set title = xesam_url | regex_findall(find='([^\\/]+?)(?:\.[^.\\/]+)?$') | first | default('') %}
-                {% endif %}
+                      {# title: 'xesam:title' or filename without extension from 'xesam:url' #}
+                      {% set title = metadata.get('xesam:title', '') %}
+                      {% if not title or title == '' %}
+                      {%    set title = xesam_url | regex_findall(find='([^\\/]+?)(?:\.[^.\\/]+)?$') | first | default('') %}
+                      {% endif %}
 
-                {% set media_image_url = mpris_art_url %}
-                {% if xesam_url.startswith('https://www.youtube.com/watch?v=') %}
-                {%    set media_image_url = xesam_url | regex_replace(
-                        find='https:\/\/www\\.youtube\\.com\/watch\\?v=([^&]+).*',
-                        replace='https://img.youtube.com/vi/\\1/maxresdefault.jpg'
-                      ) %}
-                {% endif %}
+                      {% set media_image_url = mpris_art_url %}
+                      {% if xesam_url.startswith('https://www.youtube.com/watch?v=') %}
+                      {%    set media_image_url = xesam_url | regex_replace(
+                              find='https:\/\/www\\.youtube\\.com\/watch\\?v=([^&]+).*',
+                              replace='https://img.youtube.com/vi/\\1/maxresdefault.jpg'
+                            ) %}
+                      {% endif %}
 
-                {{
-                  value_json | combine({
-                    "MediaDuration": ((metadata.get('mpris:length') or 0) / 1000000) | int,
-                    "MediaPosition": ((value_json.get('Position') or 0) / 1000000) | int,
-                    "MediaTitle": title,
-                    "MediaAlbum": metadata.get('xesam:album', ''),
-                    "MediaArtists": artists | join(', '),
-                    "MediaImageUrl": media_image_url,
-                    "VolumeMuted": value_json.get('Volume') == 0
-                  }) | to_json
-                }}
-                {% endraw %}
-            image:
-              platform: image
-              name: Image
-              unique_id: 22c9206e-4af3-47d8-ac01-c23d62e43177
-              image_topic: dbus2mqtt/org.mpris.MediaPlayer2/artUrlImage
+                      {{
+                        value_json | combine({
+                          "MediaDuration": ((metadata.get('mpris:length') or 0) / 1000000) | int,
+                          "MediaPosition": ((value_json.get('Position') or 0) / 1000000) | int,
+                          "MediaTitle": title,
+                          "MediaAlbum": metadata.get('xesam:album', ''),
+                          "MediaArtists": artists | join(', '),
+                          "MediaImageUrl": media_image_url,
+                          "VolumeMuted": value_json.get('Volume') == 0
+                        }) | to_json
+                      }}
+                      {% endraw %}
+                  image:
+                    platform: image
+                    name: Image
+                    unique_id: 22c9206e-4af3-47d8-ac01-c23d62e43177
+                    image_topic: dbus2mqtt/org.mpris.MediaPlayer2/artUrlImage
