--- a/docs/examples/home_assistant_media_player.yaml
+++ b/docs/examples/home_assistant_media_player.yaml
@@ -49,6 +49,8 @@ dbus:
               interface: org.mpris.MediaPlayer2.Player
               signal: Seeked
             - type: context_changed
+          conditions:
+            - "{{ dbus_list('org.mpris.MediaPlayer2.*') | length > 0 }}"
           actions:
             - type: context_set
               context:
@@ -92,11 +94,11 @@ dbus:
           actions:
             - type: context_set
               context:
-                mpris_bus_name: '{{ current_player_bus_name | default(dbus_list("org.mpris.MediaPlayer2.*") | first, true) }}'
+                mpris_bus_name: '{{ current_player_bus_name | default(dbus_list("org.mpris.MediaPlayer2.*") | first, true) | default(None) }}'
                 mpris_path: /org/mpris/MediaPlayer2
             - type: context_set
               context:
-                artUrl: "{{ (dbus_property_get(mpris_bus_name, mpris_path, 'org.mpris.MediaPlayer2.Player', 'Metadata') or {}).get('mpris:artUrl') }}"
+                artUrl: "{{ (dbus_property_get(mpris_bus_name, mpris_path, 'org.mpris.MediaPlayer2.Player', 'Metadata') or {}).get('mpris:artUrl') if mpris_bus_name else None }}"
             - type: mqtt_publish
               topic: dbus2mqtt/org.mpris.MediaPlayer2/artUrlImage
               payload_type: binary
@@ -106,7 +108,8 @@ dbus:
         - name: player removed
           triggers:
             - type: object_removed
-            # filter: # TODO: Check if this is the last or inactive one #
+          conditions:
+            - "{{ dbus_list('org.mpris.MediaPlayer2.*') | length == 0 }}"
           actions:
             - type: mqtt_publish
               topic: dbus2mqtt/org.mpris.MediaPlayer2/state
